{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 12,
  "lineage": "3ce3ef9c-28b8-ee17-833a-3eb677309035",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820242910070:internet-gateway/igw-0db470554ea477ba7",
            "id": "igw-0db470554ea477ba7",
            "owner_id": "820242910070",
            "tags": {
              "Name": "DjangoRDSInternetGateway"
            },
            "tags_all": {
              "Name": "DjangoRDSInternetGateway"
            },
            "vpc_id": "vpc-0882b92f6bf2b9808"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820242910070:route-table/rtb-0dbb07a8f7a15ab7d",
            "id": "rtb-0dbb07a8f7a15ab7d",
            "owner_id": "820242910070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db470554ea477ba7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DjangoRDSRouteTable"
            },
            "tags_all": {
              "Name": "DjangoRDSRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882b92f6bf2b9808"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065c36dfff97bb968",
            "route_table_id": "rtb-0dbb07a8f7a15ab7d",
            "subnet_id": "subnet-0cc12ab3f525a1d99"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.default",
            "aws_subnet.subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004196828bc328adb",
            "route_table_id": "rtb-0dbb07a8f7a15ab7d",
            "subnet_id": "subnet-0b3cea00716c7a836"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.default",
            "aws_subnet.subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820242910070:security-group/sg-056b73486bfcc0462",
            "description": "Allow all inbound traffic for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056b73486bfcc0462",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DjangoRDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "820242910070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882b92f6bf2b9808"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820242910070:subnet/subnet-0cc12ab3f525a1d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc12ab3f525a1d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "820242910070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DjangoRDSSubnet1"
            },
            "tags_all": {
              "Name": "DjangoRDSSubnet1"
            },
            "vpc_id": "vpc-0882b92f6bf2b9808"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820242910070:subnet/subnet-0b3cea00716c7a836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3cea00716c7a836",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "820242910070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DjangoRDSSubnet2"
            },
            "tags_all": {
              "Name": "DjangoRDSSubnet2"
            },
            "vpc_id": "vpc-0882b92f6bf2b9808"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820242910070:vpc/vpc-0882b92f6bf2b9808",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fada08aabced209b",
            "default_route_table_id": "rtb-0da969e51b9f49a43",
            "default_security_group_id": "sg-04fb99703311d40c3",
            "dhcp_options_id": "dopt-0d64d35e2262eb88c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0882b92f6bf2b9808",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da969e51b9f49a43",
            "owner_id": "820242910070",
            "tags": {
              "Name": "DjangoRDSVPC"
            },
            "tags_all": {
              "Name": "DjangoRDSVPC"
            }
          }
        }
      ]
    }
  ]
}